tests/cases/operators/ok/operators-try-aggregate.ari
enum MaybeI64 {
  None,
  Some(i64),
}

fn bump(value: MaybeI64) -> MaybeI64 {
  let inner = value?;
  return Some(inner + 2);
}

fn main() -> i64 {
  return bump(Some(40)) ?? 0;
}
